# flocking.cpp

./: .gitignore  CMakeLists.txt  CNAME  README.md  env.txt  flockdoc.txt  flocking  main.cpp  out.txt
data/: dataA.txt  dataB.txt  dataC.txt
docs/: index.html
docs-src/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
docs-src/public/: sketch.css
docs-src/src/: agent.ts  sketch.ts
docs/assets/: index-24cf87cf.js  index-4e886983.css  index-b5671d33.css  index-be9c68c0.js  index-c16c2616.js  index-fcb002d4.js
docs/src/: index.html  move.sh  package-lock.json  package.json  vite.config.ts
docs/src/src/: index.css  main.tsx
docs/src/src/components/: Flocking.tsx  Post.css  Post.tsx
docs/src/src/sketch/: dna.ts  food.ts  math.ts  quadtree.ts  sketch.tsx
glm/: CMakeLists.txt
src/: agent.cpp  agent.fs  agent.hpp  agent.vs  boid.cpp  boid.hpp  box.fs  box.hpp  box.vs  camera.cpp  camera.hpp  dna.hpp  drawing.cpp  drawing.hpp  engine.cpp  engine.hpp  environment.cpp  environment.hpp  flockGrid.glsl  flockNaive.glsl  flockTree.glsl  glcontext.cpp  glcontext.hpp  interface.cpp  interface.hpp  reindexGrid.glsl  sortGrid.glsl  tree.cpp  tree.hpp  update.glsl  utils.cpp  utils.hpp
src/shaders/: agent.fs  agent.vs  backupGrid.glsl  box.fs  box.vs  flockGrid.glsl  flockNaive.glsl  flockTree.glsl  reduce.glsl  reindexGrid.glsl  sortGrid.glsl  update.glsl
